Bug 369561 - Details->Install as a dropdown box does nothing
Summary: Details->Install as a dropdown box does nothing
Status: RESOLVED FIXED
Alias: None
Product: frameworks-knewstuff
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.72.0
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Alexander Lohnau
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-30 10:22 UTC by Luke-Jr
Modified: 2020-07-21 15:37 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.73
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Luke-Jr 2016-09-30 10:22:58 UTC
I found a theme that had multiple install options, but when I selected one, nothing happened. I had to go Back to the main theme browser (out of the details screen) to get it to install.

Reproducible: Always
Comment 1 Alexander Lohnau 2020-07-18 06:03:18 UTC
Confirmed, this is an issue with the old QWidgets dialog.
Comment 2 Bug Janitor Service 2020-07-18 19:36:18 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/knewstuff/-/merge_requests/14
Comment 3 Alexander Lohnau 2020-07-20 13:07:44 UTC
Git commit f5fd5458d49f0f0b5e5d682fa13f21636f597166 by Alexander Lohnau.
Committed on 18/07/2020 at 19:26.
Pushed by alex into branch 'master'.

Fix details install dropdown in QWidgets dialog
FIXED-IN: 5.73

The button was connected to the install slot, but if there
is a dropdown the actions get the signal emitted and this signal
was not handled.

To try this out you can search for "jetbrains" in the dolphin
services KNS dialog and go to the details page and install one of
the variants.

M  +10   -2    src/ui/entrydetailsdialog.cpp
M  +1    -0    src/ui/entrydetailsdialog_p.h

https://invent.kde.org/frameworks/knewstuff/commit/f5fd5458d49f0f0b5e5d682fa13f21636f597166